doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\extensions\greenfoot.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\bluejcore.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\bluejeditor.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\bluejext.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\junit-4.11.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\hamcrest-core-1.3.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\bluej.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\classgraph-4.2.6.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\diffutils-1.2.1.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\jl1.0.1.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\opencsv-2.3.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\xom-1.2.9.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\lang-stride.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\nsmenufx-2.1.4.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\richtextfx-fat-0.9.0.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\guava-17.0.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\httpclient-4.1.1.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\httpcore-4.1.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\httpmime-4.1.1.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\javafx\lib\javafx.base.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\javafx\lib\javafx.media.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\greenfoot\lib\javafx\lib\javafx.web.jar;C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\Games\Frogger
-d
C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\Games\Frogger\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\Games\Frogger\Road.java
<---- end of javadoc command ---->
Loading source file C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\Games\Frogger\Road.java...
C:\Users\MontgomeryMcGrath\Downloads\Greenfoot\Games\Frogger\Road.java:11: error: ';' expected
    int heig
            ^
1 error
